delete initial word in word cloud

--- a/DOM-challenges/cloud.html
+++ b/DOM-challenges/cloud.html
@@ -94,7 +94,7 @@
       words.
     </p>
 
-    <div id="myWordCloud">Your word cloud should go here!</div>
+    <div id="myWordCloud"></div>
 
     <script src="cloud.js"></script>
   </body>
